# Magpie

./: .gitignore  Application.cpp  Application.h  ArtificialBasis.cpp  ArtificialBasis.h  CMakeLists.txt  DataSets.h  DockWrapper.cpp  DockWrapper.h  Fractus.cpp  Fractus.h  GraphicalMethodView.cpp  GraphicalMethodView.h  GraphicsMethodScene.cpp  GraphicsMethodScene.h  ISolver.h  IcoHolder.cpp  Input.cpp  Input.h  InputView.cpp  InputView.h  MagicInput.cpp  MagicInput.h  MainScene.cpp  MainScene.h  MatrixStorage.h  MenuView.cpp  MenuView.h  Plot.h  README.md  SceneManager.cpp  SceneManager.h  SimpleMethodScene.cpp  SimpleMethodScene.h  SimplexMethod.cpp  SimplexMethod.h  SimplexMethodScene.h  SimplexMethodView.cpp  SimplexMethodView.h  Solver.cpp  (+14 more)
.github/workflows/: cmake.yml  main.yml
include/: Application.h  ArtificialBasis.h  ArtificialBasisView.h  DataSets.h  DataStorage.h  DockWrapper.h  Fractus.h  GraphicalMethod3DView.h  GraphicalMethodView.h  GraphicsMethod2D.h  GraphicsMethod3D.h  GraphicsMethodScene.h  ISolver.h  IcoHolder.h  InputMatrix.h  InputView.h  MagicInput.h  MainScene.h  MatrixStorage.h  MenuView.h  Plot.h  SceneManager.h  SimplexMethod.h  SimplexMethodAllView.h  SimplexMethodScene.h  SimplexMethodView.h  Solver.h  SolverMemento.h  StartScene.h  Test.h  UiScene.h  UiView.h  config.h  myImGui.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imconfig.h
lib/palka_core/: BufferObject.cpp  BufferObject.h  CMakeLists.txt  Camera.h  Color.h  ConsoleLog.cpp  Drawable.h  Engine.h  EventManager.cpp  EventManager.h  Mesh.h  OrbitCamera.cpp  OrbitCamera.h  PlaneMesh.cpp  PlaneMesh.h  PolygonMesh.cpp  PolygonMesh.h  ReflectionDebug.h  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SphereMesh.cpp  SphereMesh.h  StaticMesh.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TransformObject.cpp  UniformBuffer.cpp  UniformBuffer.h  Vec2.h  VertexArray.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  (+4 more)
src/: Application.cpp  ArtificialBasis.cpp  ArtificialBasisView.cpp  DataStorage.cpp  DockWrapper.cpp  Fractus.cpp  GraphicalMethod3DView.cpp  GraphicalMethodView.cpp  GraphicsMethod2D.cpp  GraphicsMethod3D.cpp  GraphicsMethodScene.cpp  IcoHolder.cpp  InputMatrix.cpp  InputView.cpp  MagicInput.cpp  MainScene.cpp  MenuView.cpp  SceneManager.cpp  SimpleMethodScene.cpp  SimplexMethod.cpp  SimplexMethodAll.cpp  SimplexMethodView.cpp  SolverMemento.cpp  StartScene.cpp  Test.cpp  UiScene.cpp  UiView.cpp  main.cpp  myImGui.cpp
tests/: CMakeLists.txt  TestFractus.cpp  TestGraphicMethod.cpp  TestGraphicMethodSolve.cpp  TestGraphicMethodSort2.cpp  TestMatrixStorage.cpp  TestPlot.cpp  TestPlotHasPoint.cpp  TestPlotIntersection.cpp  tests.cpp
